fixed spacing between Subscribe and Contact

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,10 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+#subscribe-contact {
+	margin-bottom: 5vh;
+}
+
 .tooltip {
 	margin: 5px;
 }
